<resources>
    <string name="app_name">MyFamilyMonitor</string>
    <string name="splash_text">PROTECTING YOUR FAMILY AND GIVING TO THEM IS SO IMPORTANT.</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="complete">Complete</string>
    <string name="edit">Edit</string>
    <string name="log_out">Logout</string>
    <string name="check_box">Check Box</string>
    <string name="exit_dialog">Are you sure? you want to exit?</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="message">Message</string>
    <string name="request_external_storage_permision">MyFamilyMonitor need read and write storage.</string>
    <string name="request_call_log_info">MyFamilyMonitor read Call info.</string>
    <string name="allow">Allow</string>
    <string name="do_u_have_account">You already have account?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="parent">Origin</string>
    <string name="child">Kiddie</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="please_enter_email_id">Please enter email ID</string>
    <string name="password_dose_nt_match">Password not matched</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_phone_number">Please enter Phone number</string>
    <string name="here_as">You are here as?</string>
    <string name="register">Register</string>
    <string name="DROP_TABLE_IF_EXISTS">\"DROP TABLE IF EXISTS \"</string>
    <string name="call_logs_tab">Call Logs</string>
    <string name="messages_tab">Messages</string>
    <string name="applications_tab">Applications</string>
    <string name="browser_tab">Browser history</string>
    <string name="phone_hint_CO">PhoneNumber:</string>
    <string name="call_type_CO">Call Type:</string>
    <string name="duration_CO">Duration:</string>
    <string name="date_co">Date:</string>
    <string name="caller_name">Caller Name:</string>
    <string name="select_applications_tab">Select Applications</string>
    <string name="from_co">From:</string>
    <string name="message_co">Message:</string>
    <string name="read_status_co">Read status:</string>
    <string name="message_type_co">Message type:</string>
    <string name="set_time">Set time</string>
    <string name="track_location">Track</string>
    <string name="browser">Browser</string>
    <string name="icon">Icon</string>
    <string name="login">Login</string>
    <string name="invalid_password">Invalid password.</string>
    <string name="phone_hint_parent">Parent registered phone number</string>
    <string name="please_enter_parent_phone_number">Please enter parent registered phone number</string>
    <string name="email_hint_parent">Parent registered Email ID</string>
    <string name="please_enter_parent_email_id">Please enter parent registered Email ID.</string>
    <string name="please_enter_valid_email_id">Please enter valid Email ID</string>
</resources>
