<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@color/colorPrimaryDark"
    android:orientation="horizontal"
    android:weightSum="4">

    <LinearLayout
        android:id="@+id/ll_apps"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="2dp"
        android:layout_weight="1"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/iv_apps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="3dp"
            android:src="@mipmap/ic_apps" />

        <TextView
            android:id="@+id/tv_apps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="2dp"
            android:text="@string/applications_tab"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="9sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_calls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_calls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="3dp"
            android:src="@mipmap/ic_call" />

        <TextView
            android:id="@+id/tv_calls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="2dp"
            android:text="@string/call_logs_tab"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="9sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_sms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_sms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="3dp"
            android:src="@mipmap/ic_sms" />

        <TextView
            android:id="@+id/tv_sms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="2dp"
            android:text="@string/messages_tab"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="9sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_web"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="3dp"
            android:src="@mipmap/ic_web" />

        <TextView
            android:id="@+id/tv_web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="2dp"
            android:text="@string/browser_tab"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="9sp" />
    </LinearLayout>

</LinearLayout>