<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/application_LL"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/select_applications_tab"
                    android:src="@mipmap/ic_applications" />

                <TextView
                    android:id="@+id/application_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:text="@string/applications_tab"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20dp" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/set_time_LL"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/select_applications_tab"
                    android:src="@mipmap/ic_time" />

                <TextView
                    android:id="@+id/set_time_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_marginBottom="2dp"
                    android:text="@string/set_time"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20dp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:id="@+id/track_location_LL"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/select_applications_tab"
                    android:src="@mipmap/ic_location" />

                <TextView
                    android:id="@+id/track_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_marginBottom="2dp"
                    android:text="@string/track_location"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20dp" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/browser_LL"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/select_applications_tab"
                    android:src="@mipmap/ic_browser" />

                <TextView
                    android:id="@+id/browser_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_marginBottom="2dp"
                    android:text="@string/browser"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20dp" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>